vmisovic: code organization, drawing letters
source files moved to 'src' folder
program divided into multiple files
drawing letters

aleksav013: fixed vmisovic commits
moved functions from .h to .c file
renamed led_cube.c to main.c

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,7 +15,10 @@ pico_sdk_init()
 
 if (TARGET tinyusb_device)
 	add_executable(led_cube
-	        led_cube.c
+	        src/init.c
+	        src/draw.c
+	        src/tests.c
+	        src/main.c
 	        )
 
 	# pull in common dependencies
